--- a/Tarea/Tarea/Tarea.csproj
+++ b/Tarea/Tarea/Tarea.csproj
@@ -208,11 +208,13 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
+    <Compile Include="Controllers\ZeballossController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\DataContex.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Zeballos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
