--- a/Tarea/Tarea/Web.config
+++ b/Tarea/Tarea/Web.config
@@ -11,8 +11,8 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Tarea-20200918025241.mdf;Initial Catalog=aspnet-Tarea-20200918025241;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+	  <add name="DefaultConnection" connectionString="Server=tcp:srvgabrielbd.database.windows.net,1433;Initial Catalog=GabrielBD;Persist Security Info=False;User ID=gabriel;Password=Passw0rd;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
